2019-09-10 Wiley E. Hill <wileyhill@gmail.com>

    * src/gattrib.c: Revise/update internal documentation.

    * src/s_object.c: Rename s_object_delete_text_object_in_object ->
      s_object_delete_text_object. Remove function s_object_has_sym_file.

2019-08-07 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_table.c: Revise s_table_gtksheet_to_table function documentation.

    * src/x_fileselect.c: Relocate the call to gtk_recent_manager_add_item
      from x_fileselect_open to x_fileselect_load_file.

    * src/x_gtksheet.c Wrap translatables in gettext macro.

2019-07-18 Wiley E. Hill <wileyhill@gmail.com>

    * po/af.po: Update Afrikaans translations.

    * po/bg.po: Update Bulgarian translations.

    * po/ca.po: Update Catalan translations.

    * po/el.po: Update Greek translations.

    * po/ja.po: Update Japanese translations

    * po/nl.po: Update Dutch translations.

2019-07-17 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_toplevel.c: Add documentation for s_toplevel_init_data_set.

2019-06-24 Wiley E. Hill <wileyhill@gmail.com>

    * include/i_vars.h: Remove extern declaration for nonexistent variables:

          * default_init_right
          * default_init_bottom

    * src: Reformat documentation:

          * src/gattrib.c
          * src/s_sheet_data.c
          * src/s_toplevel.c

    * src/x_menus.c: Declare x_menu_create_recent_action_group static.

2019-05-20 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtkitementry.c: Remove commented struct _GtkEntryPrivate.

2019-04-26 Wiley E. Hill <wileyhill@gmail.com>

    * src/x_toolbars.c: Update Doxygen params for callBack_clipboard.

    * src/x_window.c: Change backslashes to forward slashes in the path to
      geda-gattrib.png, even though they really are backslashes on windows,
      in the documentation for x_window_set_main_icon so as not to confuse
      Doxygen. Using escaping the backslashes with backslashes looks bad.

2019-04-11 Wiley E. Hill <wileyhill@gmail.com>
